Revision history for Perl extension Chemistry::Mol.

0.20  ?
        - Use Scalar::Util::weaken to avoid strong cyclic references
          and ensure garbage collection.
        - New methods for Chemistry::Mol: delete_atom, delete_bond

0.11  Sun Feb 22 2004
        - New methods for Chemistry::Mol: mass, formula, formula_hash
        - New methods for Chemistry::Atom: mass
        - New module: Chemistry::File::Formula

0.10  Mon Nov 03 2003
        - New methods for Chemistry::Atom: distance
        - New methods for Chemistry::Obj: del_attr
        - New subroutines for Chemistry::Mol: read_mol, register_format
        - New class method for Mol, Atom, and Bond: reset_id
        - Incompatible changes:
            - Changed File I/O API. It should be more stable now, but it's
              certainly not frozen yet.
            - Chemistry::Mol->atoms() and bonds() now use 1-based indexing
              instead of zero-based.
            - Now Chemistry::Obj overloads cmp instead of ==. Note that this
              overloading behavior was undocumented, so it shouldn't cause a
              problem.

0.06  Fri Sep 26 2003
        - New methods for Chemistry::Mol
            - atoms()
            - bonds()
            - by_id()
            - atoms_by_name()

0.05  Tue Sep 23 2003
	- First release
